--- a/.env.local.example
+++ b/.env.local.example
@@ -1,1 +1,3 @@
-LTA_DATAMALL_API_KEY_BUS="ksdnfjbhvg"
+LTA_DATAMALL_API_KEY_BUS="kCsdnBVGV2Hbhv3g7W4=="
+LTA_DATAMALL_API_KEY_BICYCLE="hgfT1P75Ubh2gy3FE7=="
+LTA_DATAMALL_API_KEY_MRTS="JaHdsff2tG68cD3xd3f7=="
